--- a/primeiroPrograma.ipynb
+++ b/primeiroPrograma.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "14"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "6"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "8"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "4.0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "16"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,12 +123,12 @@
    "source": [
     "# Exponenciação\n",
     "4 ** 2\n",
-    "# Leia-se 4 elevado ao quadrado"
+    "# Leia-se quatro elevado ao quadrado."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "4.0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,12 +145,12 @@
    "source": [
     "# Radiciação\n",
     "16 ** (1/2)\n",
-    "# Leia-se Raiz quadrada de 16. Da mesma forma se no lugar do 1/2 fosse 1/3 ai leria-se raiz cubica de 16"
+    "# Leia-se Raiz quadrada de dezesseis. Da mesma forma se no lugar do 1/2 fosse 1/3 ai leria-se raiz cúbica de dezesseis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "3"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "4"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -214,19 +214,19 @@
        "24"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# A mutiplicação ocorrerá primeiro.\n",
+    "# A mutiplicação ocorrera primeiro.\n",
     "4 + 4 * 4 + 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "12"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "5.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "2.6666666666666665"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "True"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "False"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "True"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "False"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "False"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "True"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Observção: nos exemplos acima o código ira retorna verdadeiro(True) ou falso(False).** "
+    "**Observção: nos exemplos acima o código irá retorna verdadeiro(True) ou falso(False).** "
    ]
   },
   {
@@ -459,12 +459,12 @@
    "metadata": {},
    "source": [
     "## Variáveis\n",
-    "**Variáveis são um dos grandes pilares da programação em python. Ao invés dee trabalhar diretamente com os valores, atribuimos valores às variáveis e trabalhamos com elas, o que torna a programação mais flexível. Vejamos alguns exemplos de como isto funciona:**"
+    "**Variáveis são um dos grandes pilares da programação em python. Ao invés de trabalhar diretamente com os valores, atribuimos valores às variáveis e trabalhamos com elas, o que torna a programação mais flexível. Vejamos alguns exemplos de como isto funciona:**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -518,22 +518,22 @@
     "texto = \"Olá Mundo!\"\n",
     "_teste_ = 10\n",
     "\n",
-    "# Você pode dar o comando com a função print com o nome da variável entre parênteses para imprimir o seu valor\n",
+    "# Você pode usar o comando com a função print com o nome da variável entre parênteses para imprimir o seu valor.\n",
     "\n",
     "print(num2) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid decimal literal (1835825511.py, line 2)",
+     "evalue": "invalid decimal literal (3569646162.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[47], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    2num = 2\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid decimal literal\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[24], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    2num = 2\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid decimal literal\n"
      ]
     }
    ],
@@ -543,18 +543,18 @@
     "@texto = \"Olá Mundo!\"\n",
     " teste = 10\n",
     "\n",
-    "# Você pode dar o comando com a função print com o nome da variável entre parênteses e nesse caso não ira imprimir o seu valor\n",
+    "# Você pode usar o comando com a função print com o nome da variável entre parênteses e nesse caso não ira imprimir o seu valor.\n",
     "\n",
     "print( teste)\n",
     "\n",
-    "# Ao digitar alguma dessas variáveis ira dar erro. "
+    "# Ao usar o comando print para imprimir o valor de alguma dessas variáveis irá dar erro. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Lembre-se! Variáveis são muito úteis para seu código, então para facilitar seu trabalho, de a elas nomes que facilite a sua compreenção e a dos demais que possa vim a utilizar se código.**"
+    "**Lembre-se! Variáveis são muito úteis para seu código, então para facilitar seu trabalho de a elas nomes que facilite a sua compreenção e a dos demais que possa vim a utilizar se código.**"
    ]
   },
   {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -596,16 +596,16 @@
     }
    ],
    "source": [
-    "# Definindo um valor do tipo string para uma variável\n",
+    "# Definindo um valor do tipo string para uma variável.\n",
     "string = \"Bem vindos ao curso de Python do FEA.dev!\"\n",
     "\n",
-    "# Executando o comando print com a variável string\n",
+    "# Executando o comando print com a variável string.\n",
     "print(string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -667,12 +667,12 @@
    "metadata": {},
    "source": [
     "### Indexação e fatiamento de strings.\n",
-    "É possível escolher um caractere específico de uma string digitando o número referente a sua possição, o que é chamado de ínice. Lembrando que a contagem desta posição em python começa aparti do 0   "
+    "É possível escolher um caractere específico de uma string digitando o número referente a sua possição, o seu index. Lembrando que a contagem desta posição em python começa aparti do 0   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -712,13 +712,13 @@
    ],
    "source": [
     "# Podemos também acessar de trás para frente, sendo o ultimo caractere -1\n",
-    "# Selecionando o penúltimo caractere\n",
-    "string[-1]"
+    "# Selecionando o penúltimo caractere.\n",
+    "string[-2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -733,15 +733,15 @@
     }
    ],
    "source": [
-    "# Para seleciornar m grupo de caracteres, tilizamos dois pontos(:)\n",
-    "# Repare que o começo da seleção inclui o número que iniciara a contagem de caractere e vai até um caractere antes do selecionado.\n",
-    "# Ou seja, selecionando [4:10], obteremos do apartir do caractere 4 até o caractere 9.\n",
+    "# Para seleciornar um grupo de caracteres, utilizamos dois pontos(:)\n",
+    "# Repare que o começo da seleção inclui o número que iniciará a contagem de caractere e vai até um caractere antes do selecionado.\n",
+    "# Ou seja, selecionando [4:10], obteremos apartir do caractere 4 até o caractere 9.\n",
     "string[4:10] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
     }
    ],
    "source": [
-    "# Para selecionar de um carctere especifico até o uultimo caractere, basta sar o número referente ao desejado,\n",
+    "# Para selecionar um carctere específico até o ultimo caractere, basta usar o número referente ao desejado,\n",
     "# E não especificar o último.\n",
     "# Assim ele vai selecionar do número especificado até o final.\n",
     "string[14:]"
@@ -776,15 +776,15 @@
     "1. **exemplo.strip():** retira os espaços em branco no cameço e no fim do valor da variável.\n",
     "1. **exemplo.startswith('xyz'):** testa se o valor da variável começa com os elementos explicitados entre parênteses.\n",
     "1. **exemplo.endswith('xyz'):** testa se a o valor da variável termina com os elementos explicitados entre parênteses.\n",
-    "1. **exemplo.find('xyz'):** procura a se o valor da variável tem os elementos explicitados entre parênteses, se sim, ele retornara o número do index referente onde se encontra o elemento, caso contrario retorna o valor -1.\n",
-    "1. **exemplo.replace('old' , 'new'):** traca o primeiro valor explicitado entre parênteses antes da vírgula, pelo o que está após.\n",
+    "1. **exemplo.find('xyz'):** procura se o valor da variável tem os elementos explicitados entre parênteses, se sim, ele retornara o número do index referente onde se encontra o elemento, caso contrario retorna o valor -1.\n",
+    "1. **exemplo.replace('old' , 'new'):** troca o primeiro valor explicitado entre parênteses antes da vírgula pelo o que está após a vírgula.\n",
     "---\n",
     "Para mais exemplos de métodos de string [clique aqui](https://docs.python.org/pt-br/3/library/string.html).   \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -821,14 +821,14 @@
     }
    ],
    "source": [
-    "#Lower\n",
+    "#Lower:\n",
     "exemplo = \"EXemPLO\"\n",
     "exemplo.lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -843,14 +843,14 @@
     }
    ],
    "source": [
-    "#Strip\n",
+    "#Strip:\n",
     "exemplo = \"      exemplo             \"\n",
     "exemplo.strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -865,14 +865,14 @@
     }
    ],
    "source": [
-    "#Startswith\n",
+    "#Startswith:\n",
     "exemplo = \"exemplo\"\n",
     "exemplo.startswith('e')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -887,14 +887,14 @@
     }
    ],
    "source": [
-    "#Endswith\n",
+    "#Endswith:\n",
     "exemplo = \"exemplo\"\n",
     "exemplo.endswith('e')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -909,14 +909,14 @@
     }
    ],
    "source": [
-    "#Find\n",
+    "#Find:\n",
     "exemplo = \"exemplo\"\n",
     "exemplo.find('x')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +931,7 @@
     }
    ],
    "source": [
-    "#Replace\n",
+    "#Replace:\n",
     "exemplo2 = \"Programar é muito chato!\"\n",
     "exemplo2.replace('chato', 'bom') "
    ]
@@ -941,9 +941,9 @@
    "metadata": {},
    "source": [
     "## Input e Output\n",
-    "**Veremos agora como armazenar informações externas no seu código!**\n",
+    "**Veremos agora como armazenamos informações externas no seu código!**\n",
     "\n",
-    "Para armazenar informações utilizamos a função input(), e entre parênteses coolocamos uma pergnta em forma de string. "
+    "Para armazenar informações utilizamos a função input(), e entre parênteses colocamos uma pergunta em forma de string. "
    ]
   },
   {
@@ -952,7 +952,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Usando a função input() o valor que está contido dentro dele séra exibido como uma pergunta.\n",
+    "# Usando a função input() o valor que está contido dentro dele entre parênteses séra exibido como uma pergunta.\n",
     "input(\"Como você está? \")"
    ]
   },
@@ -960,12 +960,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "E se tratando da função de output diferente da input ela serve para saída de dados, como por exemplo a função print "
+    "E se tratando da função de output diferente da input ela serve para saída de dados, como por exemplo a função print. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -984,23 +984,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podemos também atribuir inputs as variáveis e usar a função print para exebir os dados que foram coletados pelo input."
+    "Podemos também atribuir inputs às variáveis e usar a função print para exibir os dados que foram coletados pela fiunção input."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Você possui  10 anos, que legal\n",
+      "você possui 10 anos, que legal\n"
+     ]
+    }
+   ],
    "source": [
-    "idade = input(\"Qunatos anos você tem? \")\n",
+    "idade = input(\"Quantos anos você tem? \")\n",
     "\n",
     "# E podemos utilizar duas maneiras de colocar as variáveis junto às strings.\n",
     "\n",
-    "print(\"Você possui \", idade, \"anos, que legal\")\n",
-    "print(f\"você possui {idade} anos, que legal\")\n",
+    "print(\"Você possui \", idade, \"anos, que legal!\")\n",
+    "print(f\"Você possui {idade} anos, que legal!\")\n",
     "\n",
-    "# No segundo print para que ele funcione perfeitamente deve-se colocar um a letra f antes da string"
+    "# No segundo print para que ele funcione perfeitamente deve-se colocar um a letra f antes da string."
    ]
   },
   {
@@ -1013,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
